proxy/easypost-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easypost-proxy
  labels:
    app: easypost-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easypost-proxy
  template:
    metadata:
      labels:
        app: easypost-proxy
    spec:
      # 添加节点选择器，指定工作节点
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      # 镜像拉取认证配置
      imagePullSecrets:
        - name: aliyun-registry-secret

      containers:
        - name: easypost-backed
          image: registry.cn-shanghai.aliyuncs.com/qianjisan/easypost-proxy:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: easypost-proxy
spec:
  type: NodePort
  selector:
    app: easypost-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081
